--- a/config/ticket_config.yaml
+++ b/config/ticket_config.yaml
@@ -5,7 +5,7 @@ set:
   # - 2018-01-06
   # - 2018-01-07
   station_dates:
-    - "2019-01-11"
+    - "2019-02-02"
 
   # 是否根据时间范围 和 乘车类型 购票
   # 否则将需要手动填写车次
@@ -45,21 +45,26 @@ set:
 #    - "G1021"
 #    - "G99"
 #    - "G6011"
-    - "D2972"
-    - "D1874"
-    - "D2834"
+    - "T169"
+    - "D941"
+    - "D931"
+    - "D935"
 
   # 出发城市，比如深圳北，就填深圳就搜得到
-  from_station: "广州南"
+  from_station: "上海"
 
   # 到达城市 比如深圳北，就填深圳就搜得到
-  to_station: "三江南"
+  to_station: "广州"
 
   # 座位(list) 多个座位ex:
   # - "二等座"
   # - "一等座"
   set_type:
   - "二等座"
+  - "硬卧"
+  - "软卧"
+  - "硬座"
+  - "无座"
 
   # 当余票小于乘车人，如果选择优先提交，则删减联系人和余票数一致在提交
   is_more_ticket: True
@@ -68,12 +73,12 @@ set:
   # - "张三"
   # - "李四"
   ticke_peoples:
-#    - "文贤平"
-    - "梁敏"
+    - "黄白婷"
+ 
   # 12306登录账号(list)
   12306account:
-    - user: "931128603@qq.com"
-    - pwd: ""
+    - user: "13533400712"
+    - pwd: "sumisora1989711"
 
 # 加入小黑屋时间，此功能为了防止僵尸票导致一直下单不成功错过正常的票
 ticket_black_list_time: 5
@@ -86,8 +91,8 @@ auto_code_type: 2
 
 # 打码平台账号
 auto_code_account:
-  user: "931128603"
-  pwd: ""
+  user: "emailck"
+  pwd: "sumisora1989711"
 
 #  邮箱配置，如果抢票成功，将通过邮件配置通知给您
 #  列举163
@@ -103,18 +108,18 @@ auto_code_account:
 #  password: "授权码"
 #  host: "smtp.qq.com"
 email_conf:
-  is_email: True
-  email: "931128603@qq.com "
-  notice_email_list: "931128603@qq.com"
-  username: "931128603"
-  password: ""
+  is_email: False
+  email: "emailck@qq.com "
+  notice_email_list: "emailck@qq.com"
+  username: "emailck"
+  password: "hzcekwzlnisvbfgd"
   host: "smtp.qq.com"
 
 # 是否开启cdn查询，可以更快的检测票票 1为开启，2为关闭
 is_cdn: 1
 
 # 下单接口分为两种，1 为快速下单，2 是普通下单
-order_type: 1
+order_type: 2
 
 # 下单模式 1 为预售，整点刷新，刷新间隔0.1-0.5S, 然后会校验时间，比如12点的预售，那脚本就会在12.00整检票，刷新订单
 #         2 是捡漏，捡漏的刷新间隔时间为0.5-3秒，时间间隔长，不容易封ip
